--- a/toteutus7.html
+++ b/toteutus7.html
@@ -527,10 +527,9 @@
 			<div class="container oppilaitos">
 				<div class="row info-page">
 					<div class="col-xs-12 col-md-9 left-column toteutus">
-						
 						<h1>
-							<a class="header" href="koulutus1.html">
-								<span class="light-font">Keuda, Kerava, Keskikatu</span>
+							<a class="header" href="koulutus2.html">
+								<span class="light-font">Validia, Järvenpää</span>
 								<span>Tieto- ja viestintätekniikan perustutkinto</span>
 							</a>
 						</h1>
@@ -547,15 +546,15 @@
 									<div class="col-xs-12">
 										<div class="col-xs-12 course-info info">
 											<div class="col-xs-7 col-md-4">Koulutusalkaa:</div>
-											<div class="col-xs-5 col-md-8">10.8.2018</div>
+											<div class="col-xs-5 col-md-8">kevät 2018</div>
 											<div class="col-xs-7 col-md-4">Opetuskieli</div>
-											<div class="col-xs-5 col-md-8">suomi, englanti</div>
+											<div class="col-xs-5 col-md-8">suomi, ruotsi</div>
 											<div class="col-xs-7 col-md-4">Koulutuksenlaajuus:</div>
 											<div class="col-xs-5 col-md-8">180 osaamispistettä</div>
 											<div class="col-xs-7 col-md-4">Suunniteltukesto:</div>
-											<div class="col-xs-5 col-md-8">2 vuotta</div>
+											<div class="col-xs-5 col-md-8">3 vuotta</div>
 											<div class="col-xs-7 col-md-4">Opetusaika:</div>
-											<div class="col-xs-5 col-md-8">Iltaopetus</div>
+											<div class="col-xs-5 col-md-8">Ilta- ja viikonloppuopetus</div>
 											<div class="col-xs-7 col-md-4">Opetustapa:</div>
 											<div class="col-xs-5 col-md-8">Lähiopetus, Etäopetus</div>
 											<div class="col-xs-7 col-md-4">Opiskelumuoto:</div>
@@ -577,11 +576,11 @@
 								<div class="row">
 									<div class="col-xs-12 info">
 										<p>
-											<strong>Yhteishaku ammatilliseen ja lukioon, kevät 2018</strong>
+											<strong>Haku ammatilliseen ja lukioon, syksy 2017</strong>
 										</p>
-										<p>Opiskleupaikkoja 23</p>
+										<p>Opiskleupaikkoja 20</p>
 										<p>Hakuaika:</p>
-										<p>21.1.2018 klo 08:00 – 30.3.2018 klo 15:00</p>
+										<p>21.10.2017 klo 08:00 – 14.11.2017 klo 15:00</p>
 										<p class="btn-education">
 											<a href="#" class="btn btn-default" role="button">Hae koulutukseen!</a>
 										</p>
@@ -643,9 +642,11 @@
 														<ul>
 															<li>kymppiluokan (vähintään 1100 tunnin laajuisen lisäopetuksen)</li>
 															<li>ammatilliseen peruskoulutukseen valmentavan koulutuksen (VALMA),&nbsp; vähintään 30 osaamispisteen laajuisen
-																koulutuksen</li>
+																koulutuksen
+															</li>
 															<li>ammattistartin (vähintään 20 opintoviikon laajuisen ammatilliseen peruskoulutukseen ohjaavan ja valmistavan
-																koulutuksen)</li>
+																koulutuksen)
+															</li>
 															<li>valmentavan ja kuntouttavan opetuksen ja ohjauksen</li>
 															<li>maahanmuuttajien ammatilliseen peruskoulutukseen valmistavan koulutuksen</li>
 															<li>maahanmuuttajille ja muille vieraskielisille tarkoitetun lukiokoulutukseen valmistavan koulutuksen</li>
@@ -940,7 +941,8 @@
 													</ul>
 													<p class="ng-scope">Työkokemukseksi hyväksytään työsuhteessa saatu työkokemus, jonka olet hankkinut peruskoulun jälkeen tai täytettyäsi
 														16 vuotta. Osa-aikatyössä 150 tunnin mittainen saman työnantajan palveluksessa tehty työ vastaa yhden kuukauden
-														työkokemusta.&nbsp;</p>
+														työkokemusta.&nbsp;
+													</p>
 													<p class="ng-scope">Työharjoittelu / työkokeilu tarkoittaa harjoittelua, johon työ- ja elinkeinotoimisto on sinut ohjannut.&nbsp;</p>
 													<p class="ng-scope">Oppisopimuskoulutuksesta luetaan työkokemukseksi todistuksissa mainittu työkokemuksen määrä.&nbsp;</p>
 													<p class="ng-scope">Hakemuksessa otetaan huomioon työkokemus, joka on saatu ennen hakuajan päättymistä. Jos sinulla esimerkiksi
@@ -991,7 +993,8 @@
 													<ul class="ng-scope">
 														<li>
 															<b>Voit saada 1–3 lisäpistettä urheilullisista saavutuksista, jos haet urheilijalle tarkoitettuun ammatilliseen
-																koulutukseen.</b>
+																koulutukseen.
+															</b>
 														</li>
 													</ul>
 													<h3 class="ng-scope">
@@ -1008,7 +1011,8 @@
 															<b>Voit saada 0–10 pistettä pääsy- ja soveltuvuuskokeesta.&nbsp;</b>
 															<b>
 																<span lang="FI">Kokeista saadut pisteet ovat lisäpisteitä valinnassa, joten 0 pistettä kokeesta ei ole esteenä opiskelijaksi
-																	valinnalle.</span>
+																	valinnalle.
+																</span>
 															</b>
 														</li>
 														<li>Huomaathan, että kaikissa koulutuksissa ei ole pääsy- ja soveltuvuuskokeita. Tiedot pääsykokeesta löytyvät
@@ -1070,7 +1074,8 @@
 														<li>koulutodistusten puuttuminen tai todistusten vertailuvaikeudet.&nbsp;</li>
 													</ul>
 													<p class="ng-scope">Koulutustarpeesi ja edellytyksesi suoriutua opinnoista arvioidaan ja otetaan huomioon, kun valintapistemäärästä
-														poiketaan.</p>
+														poiketaan.
+													</p>
 												</div>
 											</div>
 										</div>
@@ -1125,12 +1130,12 @@
 									<li>
 										<h1>
 											<a href="#">
-												<span class="light-font">Keuda, Kerava, Keskikatu</span>
+												<span class="light-font">Validia, Järvenpää</span>
 											</a>
 										</h1>
 									</li>
 									<li>
-										<a href="oppilaitos3.html" role="button" class="btn btn-primary tutustu-button">Tutustu oppilaitokseen</a>
+										<a href="oppilaitos7.html" role="button" class="btn btn-primary tutustu-button">Tutustu oppilaitokseen</a>
 									</li>
 								</ul>
 							</div>
@@ -1139,13 +1144,12 @@
 									<li>
 										<span>Yhteyshenkilö:</span>
 									</li>
-									<li>Opinto-ohjaaja</li>
-									<li>Siiri Sihteri</li>
+									<li>Opintotoimisto</li>
 									<li>
-										<a href="mailto:info@keuda.fi">Sähköposti: info(at)keuda.fi</a>
+										<a href="mailto:jarmo.heino@eduvalidia.fi">Sähköposti: jarmo.heino(at)eduvalidia.fi</a>
 									</li>
 									<li>
-										<a href="tel:+358409088934">Puhelin: 040 908 8934</a>
+										<a href="tel:+358447650440">Puhelin: 044 765 0440</a>
 									</li>
 									<li>
 										<a class="external-link" href="#">
@@ -1163,6 +1167,11 @@
 										<span>Tutkintonimikkeet:</span>
 									</li>
 									<li>Datanomi</li>
+									<li class="hae">
+										<a href="#">
+											<i class="fa fa-circle" aria-hidden="true"></i>
+										</a>
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -1349,7 +1358,6 @@
 					}
 				}
 			});
-
 		});
 	</script>
 </body>
