--- a/koulutus2.html
+++ b/koulutus2.html
@@ -549,7 +549,7 @@
 									<div class="panel panel-default">
 										<div class="panel-heading" role="tab" id="headingOne">
 											<h4 class="panel-title">
-												<a role="button" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+												<a role="button" data-toggle="collapse" href="#collapseOne" class="collapsed" aria-expanded="true" aria-controls="collapseOne">
 													Kuvaus
 												</a>
 											</h4>
