--- a/koulutus2.html
+++ b/koulutus2.html
@@ -326,7 +326,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-xs-12 col-md-8 header-search">
-								<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia tai opplaitoksia">
+								<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia ja oppilaitoksia">
 								<a href="search.html" class="search-button"></a>
 							</div>
 						</div>
@@ -649,22 +649,10 @@
 												</button>
 												<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
 													<li>
-														<a href="#">Osaamisala 1</a>
+														<a href="#">Käytöntuen osaamisala</a>
 													</li>
 													<li>
-														<a href="#">Osaamisala 2</a>
-													</li>
-													<li>
-														<a href="#">Osaamisala 3</a>
-													</li>
-													<li>
-														<a href="#">Osaamisala 4</a>
-													</li>
-													<li>
-														<a href="#">Osaamisala 5</a>
-													</li>
-													<li>
-														<a href="#">Osaamisala 6</a>
+														<a href="#">Ohjelmistotuotannon osaamisala</a>
 													</li>
 												</ul>
 											</div>
@@ -689,7 +677,7 @@
 																			Pohjakoulutus: peruskoulu|
 																			Maksullinen: Maksuton
 																			" nimi-data="Validia, Järvenpää"> Validia, Järvenpää</a>
-																			<p>Käyntöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
+																			<p>Käytöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
 																	</div>
 																	<div class="compare-button">
 																		<span role="button"></span>
