--- a/koulutus1.html
+++ b/koulutus1.html
@@ -326,7 +326,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-xs-12 col-md-8 header-search">
-								<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia tai opplaitoksia">
+								<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia ja oppilaitoksia">
 								<a href="search.html" class="search-button"></a>
 							</div>
 						</div>
@@ -681,22 +681,10 @@
 												</button>
 												<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
 													<li>
-														<a href="#">Osaamisala 1</a>
+														<a href="#">Käytöntuen osaamisala</a>
 													</li>
 													<li>
-														<a href="#">Osaamisala 2</a>
-													</li>
-													<li>
-														<a href="#">Osaamisala 3</a>
-													</li>
-													<li>
-														<a href="#">Osaamisala 4</a>
-													</li>
-													<li>
-														<a href="#">Osaamisala 5</a>
-													</li>
-													<li>
-														<a href="#">Osaamisala 6</a>
+														<a href="#">Ohjelmistotuotannon osaamisala</a>
 													</li>
 												</ul>
 											</div>
@@ -721,7 +709,7 @@
 																										Pohjakoulutus: peruskoulu|
 																										Maksullinen: Maksuton
 																										" nimi-data="Ammattiopisto Tavastia, Hämeenlinna"> Ammattiopisto Tavastia, Hämeenlinna</a>
-																		<p>Käyntöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
+																		<p>Käytöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
 																	</div>
 																	<div class="compare-button">
 																		<span role="button"></span>
@@ -745,7 +733,7 @@
 																											Pohjakoulutus: peruskoulu|
 																											Maksullinen: Maksuton
 																											" nimi-data="Järviseudun Ammatti-Instituutti, Alajärvi">Järviseudun Ammatti-Instituutti, Alajärvi</a>
-																											<p>Käyntöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
+																											<p>Käytöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
 																	</div>
 																	<div class="compare-button">
 																		<span role="button"></span>
@@ -771,7 +759,7 @@
 																								Pohjakoulutus: peruskoulu|
 																								Maksullinen: Maksuton
 																								" nimi-data="Keuda, Kerava, Keskikatu">Keuda, Kerava, Keskikatu</a>
-																								<p>Käyntöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
+																								<p>Käytöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
 																	</div>
 																	<div class="compare-button">
 																		<span role="button"></span>
@@ -795,7 +783,7 @@
 																									Pohjakoulutus: peruskoulu|
 																									Maksullinen: Maksuton																	
 																									" nimi-data="Raahen Porvari- Ja Kauppakoulurahasto Sr">Raahen Porvari- Ja Kauppakoulurahasto Sr</a>
-																									<p>Käyntöntuen osaamisala</p>
+																									<p>Käytöntuen osaamisala</p>
 																	</div>
 																	<div class="compare-button">
 																		<span role="button"></span>
@@ -821,7 +809,7 @@
 																									Pohjakoulutus: peruskoulu|
 																									Maksullinen: Maksuton
 																									" nimi-data="Suomen Liikemiesten Kauppaopisto">Suomen Liikemiesten Kauppaopisto</a>
-																									<p>Käyntöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
+																									<p>Käytöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
 																	</div>
 																	<div class="compare-button">
 																		<span role="button"></span>
