--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-md-8 header-search main">
 								<div class="search" >
-									<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia tai opplaitoksia" placeholder="Placeholder">
+									<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia ja oppilaitoksia" placeholder="Placeholder">
 									<a href="search.html" class="search-button"></a>
 								</div>
 								<a class="filter-button index-page"></a>
