--- a/search.html
+++ b/search.html
@@ -326,16 +326,15 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-xs-12 col-md-8 header-search">
-								<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia tai opplaitoksia">
+								<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia ja oppilaitoksia">
 								<a href="#" class="search-button"></a>
 							</div>
 						</div>
-					</div>
+					</div>
 					<div class="container">
 						<div class="row">
 							<div class="col-xs-12">
 								<div class="filter-button" role="button">
-
 								</div>
 							</div>
 						</div>
