--- a/toteutus4.html
+++ b/toteutus4.html
@@ -325,7 +325,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-xs-12 col-md-8 header-search">
-								<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia tai opplaitoksia">
+								<input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia ja oppilaitoksia">
 								<a href="search.html" class="search-button"></a>
 							</div>
 						</div>
