--- a/compare.html
+++ b/compare.html
@@ -160,7 +160,7 @@
 									   <div class="row">
 											   <div class="col-xs-12 col-md-8 header-search">
 													 <input id="regular-input" class="oph-input" type="text" placeholder="Etsi ja vertaile koulutuksia ja oppilaitoksia">
-													 <a href="#" class="search-button"></a>
+													 <a href="search.html" class="search-button"></a>
 											   </div>
 										   </div>
 							   </div>
@@ -375,6 +375,16 @@
 							</div>
 							<div class="row">
 								<div class="col-xs-6">
+									<div class="col-xs-12">Osaamisalat</div>
+								</div>
+								<div class="col-xs-6">
+									<div class="col-xs-12">Ohjelmistotuotannon osaamisala</div>
+									<div class="col-xs-12">Ohjelmistotuotannon osaamisala</div>
+									<div class="col-xs-12">Ohjelmistotuotannon osaamisala</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-6">
 									<div class="col-xs-12">Opetusaika</div>
 								</div>
 								<div class="col-xs-6">
@@ -456,6 +466,7 @@
 											 <li class="list-group-item">Opetuskieli</li>
 											 <li class="list-group-item">Koulutuksen laajuus</li>
 											 <li class="list-group-item">Suunnittelu kesto</li>
+											 <li class="list-group-item">Osaamisalat</li>
 											 <li class="list-group-item">Opetusaika</li>
 											 <li class="list-group-item">Opetustapa</li>
 											 <li class="list-group-item">Opiskelumuoto</li>
@@ -469,6 +480,7 @@
 											 <li class="list-group-item">Suomi</li>
 											 <li class="list-group-item">180 osaamispistettä</li>
 											 <li class="list-group-item">2 vuotta</li>
+											 <li class="list-group-item">Ohjelmistotuotannon osaamisala</li>
 											 <li class="list-group-item">Päiväopetus</li>
 											 <li class="list-group-item">Lähiopetus</li>
 											 <li class="list-group-item">Ohjattu opetus</li>
@@ -482,6 +494,7 @@
 											 <li class="list-group-item">suomi, englanti</li>
 											 <li class="list-group-item">180 osaamispistettä</li>
 											 <li class="list-group-item">2 vuotta</li>
+											 <li class="list-group-item">Ohjelmistotuotannon osaamisala</li>
 											 <li class="list-group-item">Päiväopetus</li>
 											 <li class="list-group-item">Lähiopetus, etäopetus</li>
 											 <li class="list-group-item">Monimuoto</li>
@@ -495,6 +508,7 @@
 											 <li class="list-group-item">suomi, englanti</li>
 											 <li class="list-group-item">180 osaamispistettä</li>
 											 <li class="list-group-item">3 vuotta</li>
+											 <li class="list-group-item">Ohjelmistotuotannon osaamisala</li>
 											 <li class="list-group-item">Ilta- ja viikonloppuopetus</li>
 											 <li class="list-group-item">Lähiopetus, etäopetus</li>
 											 <li class="list-group-item">Monimuoto</li>
@@ -504,7 +518,28 @@
 									 </div>		
 							 </div>							   
 						</div>
-		   <footer class="container-fluid margin">
+						<div class="container-fluid app-navigation-bar">
+							<div class="container">
+								<div class="row">
+									<div class="col-xs-4 previous">
+										<a href="#">
+											<i class="fa fa-circle-thin" aria-hidden="true"></i>
+										</a>
+									</div>
+									<div class="col-xs-4 search">
+										<a href="search.html">
+											<i class="fa fa-circle-thin" aria-hidden="true"></i>
+										</a>
+									</div>
+									<div class="col-xs-4 next">
+										<a href="#">
+											<i class="fa fa-circle-thin" aria-hidden="true"></i>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+		   <footer class="container-fluid">
 				   <div class="container">
 					   <div class="row">
 						   <div class="col-xs-12 col-md-4">
@@ -666,6 +701,38 @@
 			   $(window).on("resize", function() {
 				   $(".filter-options").css("height", $(window).innerHeight() - ($(".container.navigation").outerHeight()+$("#call-to-action-secondary").outerHeight()));
 			   });
+			   $(".app-navigation-bar .previous, .app-navigation-bar .next").on("click", function () {
+				var buttonPressed = $(this).attr("class").split(" ")[1];
+				if (sessionStorage.getItem("navigationBar") != null) {
+					var navigation = sessionStorage.getItem("navigationBar");
+					if (buttonPressed == "previous") {
+						if (navigation == 2) {
+							sessionStorage.setItem("navigationBar", "1");
+							window.location.href = "koulutus1.html";
+							return false;
+						} else {
+							return false;
+						}
+					} else {
+						if (navigation == 1) {
+							sessionStorage.setItem("navigationBar", "2");
+							window.location.href = "koulutus2.html";
+							return false;
+
+						} else {
+							return false;
+						}
+					}
+				} else {
+					if (buttonPressed == "next") {
+						sessionStorage.setItem("navigationBar", "1");
+						window.location.href = "koulutus1.html";
+						return false;
+					} else {
+						return false;
+					}
+				}
+			});
 			   
 		   });
 	</script>
