--- a/koulutus1.html
+++ b/koulutus1.html
@@ -1213,6 +1213,8 @@
 					"#call-to-action-secondary").outerHeight()));
 			}
 			$(".filter-button").on("click", function () {
+				var body = $("html, body");
+				body.stop().animate({scrollTop:0}, 500, "swing");
 				$(this).toggleClass("sulje");
 				$(".filter-container").toggleClass("open");
 				if ($(window).innerWidth() <= 768) {
