--- a/toteutus6.html
+++ b/toteutus6.html
@@ -577,6 +577,8 @@
 				$(".filter-options").css("height", $(window).innerHeight() - ($(".container.navigation").outerHeight() + $("#call-to-action-secondary").outerHeight()));
 			}
 			$(".filter-button").on("click", function(){
+				var body = $("html, body");
+				body.stop().animate({scrollTop:0}, 500, "swing");
 				$(this).toggleClass( "sulje");
 				$(".filter-container").toggleClass("open");
 				if($(window).innerWidth() <= 768) {
