--- a/compare.html
+++ b/compare.html
@@ -322,6 +322,17 @@
 									   </div>
 								   </div>	
 						   </div>
+						   <div class="container">
+							   <div class="row compare">
+								   <div class="col-xs-12">
+									<h1>
+										<a class="header" href="javascript:history.go(-1);">
+											<span class="light-font">Takaisin edeliselle sivulle</span>
+										</a>
+									</h1>
+								   </div>
+							   </div>
+						   </div>
 						   <div class="container-fluid visible-xs compare-mobile">
 							<div class="container">
 								<div class="row">
