--- a/compare.html
+++ b/compare.html
@@ -389,8 +389,8 @@
 									<div class="col-xs-12">Osaamisalat</div>
 								</div>
 								<div class="col-xs-6">
-									<div class="col-xs-12">Ohjelmistotuotannon osaamisala</div>
-									<div class="col-xs-12">Ohjelmistotuotannon osaamisala</div>
+									<div class="col-xs-12">Käytöntuen osaamisala, ohjelmistotuotannon osaamisala </div>
+									<div class="col-xs-12">Käytöntuen osaamisala, ohjelmistotuotannon osaamisala </div>
 									<div class="col-xs-12">Ohjelmistotuotannon osaamisala</div>
 								</div>
 							</div>
@@ -491,7 +491,7 @@
 											 <li class="list-group-item">Suomi</li>
 											 <li class="list-group-item">180 osaamispistettä</li>
 											 <li class="list-group-item">2 vuotta</li>
-											 <li class="list-group-item">Ohjelmistotuotannon osaamisala</li>
+											 <li class="list-group-item">Käytöntuen osaamisala, ohjelmistotuotannon osaamisala </li>
 											 <li class="list-group-item">Päiväopetus</li>
 											 <li class="list-group-item">Lähiopetus</li>
 											 <li class="list-group-item">Ohjattu opetus</li>
@@ -505,7 +505,7 @@
 											 <li class="list-group-item">suomi, englanti</li>
 											 <li class="list-group-item">180 osaamispistettä</li>
 											 <li class="list-group-item">2 vuotta</li>
-											 <li class="list-group-item">Ohjelmistotuotannon osaamisala</li>
+											 <li class="list-group-item">Käytöntuen osaamisala, ohjelmistotuotannon osaamisala </li>
 											 <li class="list-group-item">Päiväopetus</li>
 											 <li class="list-group-item">Lähiopetus, etäopetus</li>
 											 <li class="list-group-item">Monimuoto</li>
