--- a/tutkinnonosat5.html
+++ b/tutkinnonosat5.html
@@ -702,8 +702,7 @@
 																		</div>
 																		<div class="text">
 																			<a href="oppilaitos1.html"> Ammattiopisto Tavastia, Hämeenlinna</a>
-																			<p>Ammattiopisto Tavastia järjestää tutkintotavoitteista ammatillista koulutusta ammatillisena peruskoulutuksena
-																				ja näyttötutkintoina. Ammatillinen peruskoulutus tarkoittaa ammatillisia perustutkintoja ja Valma-koulutuksia.</p>
+																			<p>Käytöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
 																		</div>
 																		<div class="compare-button">
 																			<span role="button"></span>
@@ -717,9 +716,7 @@
 																		</div>
 																		<div class="text">
 																			<a href="oppilaitos2.html">Järviseudun Ammatti-Instituutti, Alajärvi</a>
-																			<p>Oppilaitoksemme tarjoaa monipuolisesti maksullisia palveluja. Opiskelijat tekevät työn ammattihenkilön ja opettajan
-																				ohjauksella ja vastuulla. Teemme mm. metallitöitä, puutöitä, rakennustöitä, koneiden korjauksia ym. Voitte tilata
-																				koulutusaloihimme liittyviä tuotteita tai työtehtäviä. Työt tilataan asianomaisen linjan opettajilta.</p>
+																			<p>Käytöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
 																		</div>
 																		<div class="compare-button">
 																			<span role="button"></span>
@@ -735,9 +732,7 @@
 																		</div>
 																		<div class="text">
 																			<a href="oppilaitos3.html">Keuda, Kerava, Keskikatu</a>
-																			<p>Keuda tekee todellisia työelämän taitajia. Järjestämme koulutusta sekä nuorille että aikuisille. Yrityksille
-																				ja yhteisöille tarjoamme työelämälähtöistä koulutusta sekä kehittämispalveluita. Kaikissa opiskelijaksi hakemiseen
-																				liittyvissä asioissa voit ottaa yhteyttä Keudan hakupalveluun.</p>
+																			<p>Käytöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
 																		</div>
 																		<div class="compare-button">
 																			<span role="button"></span>
@@ -751,9 +746,7 @@
 																		</div>
 																		<div class="text">
 																			<a href="oppilaitos4.html">Raahen Porvari- Ja Kauppakoulurahasto Sr</a>
-																			<p>RPKK:ssa voit opiskella liiketaloutta tai tieto- ja viestintätekniikkaa. Tutkinnon suorittaneena saat myös perusvalmiudet
-																				oman yrityksen perustamiseen. Lisäksi RPKK:ssa voi opiskella monia kaupallisen alan ja yrittäjyyden kehittämistä
-																				tukevia ammatti- ja erikoisammattitutkintoja sekä lyhytvalmennuksia.</p>
+																			<p>Käytöntuen osaamisala</p>
 																		</div>
 																		<div class="compare-button">
 																			<span role="button"></span>
@@ -769,10 +762,7 @@
 																		</div>
 																		<div class="text">
 																			<a href="oppilaitos5.html">Suomen Liikemiesten Kauppaopisto</a>
-																			<p>Opiskele merkonomiksi tai datanomiksi, myös kaksoistutkinnolla, ja valmistu suoraan työelämään. Liiketalouden
-																				perustutkinto ja tieto- ja viestintätekniikan perustutkinto antavat myös yleisen jatko-opintokelpoisuuden korkeakouluihin.
-							
-																			</p>
+																			<p>Käytöntuen osaamisala, ohjelmistotuotannon osaamisala</p>
 																		</div>
 																		<div class="compare-button">
 																			<span role="button"></span>
@@ -786,9 +776,7 @@
 																		</div>
 																		<div class="text">
 																			<a href="oppilaitos6.html">WinNova, Pori</a>
-																			<p>Tutustu nuorten ja aikuisten haussa oleviin koulutuksiin selaamalla alla olevaa koulutustarjotinta (Kaikki, Nuorille,
-																				Aikuisille) tai tutustumalla alakohtaisiin esittelyihin. WinNova tarjoaa myös yrityksille ja työyhteisöille
-																				monipuolisia koulutus- ja kehittämispalveluja.</p>
+																			<p>Ohjelmistotuotannon osaamisala.</p>
 																		</div>
 																		<div class="compare-button">
 																			<span role="button"></span>
