--- a/index1.html
+++ b/index1.html
@@ -545,7 +545,7 @@
 									<div class="header">
 										<h3>Tiedote</h3>
 										<a class="titlelink" href="#">
-											<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...</h5>
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...
 										</a>
 									</div>
 									<div class="block-image-background"></div>
@@ -564,7 +564,7 @@
 										<div class="header">
 											<h3>Hae Koulutukseen</h3>
 											<a class="titlelink" href="#">
-												<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...</h5>
+												Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...
 											</a>
 										</div>
 										<div class="block-image-background"></div>
@@ -583,7 +583,7 @@
 											<div class="header">
 												<h3>Uutinen</h3>
 												<a class="titlelink" href="#">
-													<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...</h5>
+													Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor...
 												</a>
 											</div>
 											<div class="block-image-background"></div>
