--- a/oppilaitos7.html
+++ b/oppilaitos7.html
@@ -547,9 +547,9 @@
 						<div class="row panel-body"> 
 							<div class="col-xs-12">
 								<p>Validia Ammattiopisto tarjoaa ammatillista erityisopetusta sekä valmentavaa koulutusta yli 600:lle opiskelijalle. Oppilaitos tuottaa lisäksi ammatilliseen erityisopetukseen liittyviä kehittämis-, ohjaus- ja tukipalveluita.</p>
-									
+
 								<p>Validia Ammattiopisto edistää ja kehittää toimintakyvyltään erilaisten ja fyysisesti vammaisten henkilöiden mahdollisuuksia osallistua, liikkua ja elää täysipainoista elämää Invalidiliiton periaatteiden mukaisesti.</p>
-									
+
 								<p>Bovallius-ammattiopisto ja Validia Ammattiopisto yhdistyvät uudeksi ammatilliseksi erityisoppilaitokseksi 1.1.2018. Uuden oppilaitoksen nimi on Ammattiopisto Spesia. </p>
 							</div>
 						</div>
@@ -1115,10 +1115,13 @@
 								$("#compare-row .pull-right .btn").removeClass("disabled");
 							}
 							if (!boxAlreadyExist) {
+								if(numberOfFieldsSelected <= 1) {
+									$("#compared-subjects").append('<div class="col-xs-12 col-md-3 compared-subjects-title">Olet valinnut vertailuun:</div>');
+								}
 								$("#compared-subjects").append('<div class="col-xs-12 col-md-3 compare-box" id="box-' + blockId +
 									'"> <button type="button" class="close" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></button> <a href="' +
-									blockContent.link + '" class="title" >' +
-									blockContent.text + '</a> <a href="' + blockContent.link + '" class="button">Tutustu</a> </div>');
+									blockContent.link + '" class="title" ><strong>' +
+									blockContent.text + ':</strong> <br> Tieto- ja viestintätekniikan perustutkinto</div>');
 							} else {
 								$("#box-" + blockId + "").remove();
 							}
